TAC.g4
grammar TAC;

tacFile: tacLine+ ;
tacLine: labeledInstruction '\n' ;

labeledInstruction: (label ':')* instruction ;

instruction: '<NO OP>' # NoOp
| lhs '=' rhs # Assignment
| 'if' relop jump # ConditionalJump
| jump # UnconditionalJump
;

jump: 'jump' label ;

label: ID ;

lhs: address # LhsSimple
| address '[' address ']' # LhsIndexed
;

rhs: address # RhsAddress
| address binoperator address # RhsBinop
| unoperator address # RhsUnop
| address '[' address ']' # RhsIndexed
//| '&' ID # RhsAddressOf
;

relop: address reloperator address ;

binoperator: '*' | '+' | '-' ;

reloperator: '==' | '!=' | '>' | '>=' | '<=' | '<' ;

unoperator: 'memrequest' ;

address: ID # Identifier
| INT # Integer
;

ID: [a-z][a-zA-Z0-9]* ;
INT: [0-9]+ ;

WS: [ \t] -> skip ;
